add chinese name

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Kengran Yang"
+title                    : "Kengran Yang 杨铿然"
 title_separator          : "-"
 name                     : &name "Kengran Yang"
 description              : &description "Computational Materials Science PhD @Princeton University"
