--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
   #   url: /teaching/
   #
   - title: "Data"
-    url: /data/
+    url: /cv/
 
   - title: "Blog Posts"
     url: /year-archive/
