--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Kengran Yang"
-  avatar           : "IMG_0836.HEIC"
+  avatar           : "IMG_0836.jpg"
   bio              : "Computational Materials Science PhD @Princeton University"
   location         : "New York"
   employer         :
